--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,4 +6,53 @@
 		= javascript_include_tag "application"
 		= csrf_meta_tags
 	%body
-		= yield
+		%br
+		.container
+			.row{"ng-controller" => "BooksController as library"}
+				.col-xs-12
+					%h1 Каталог книг
+					%table.table
+						%thead
+							%tr
+								%td №
+								%td Название книги
+								%td Описание книги
+								%td Дата создания
+								%td Редактирование
+						%tbody
+							%tr{"ng-repeat" => "book in library.books"}
+								%td {{ $index + 1 }}
+								%td {{ book.name}}
+								%td {{ book.caption }}
+								%td {{ book.release_date }}
+								%td
+									= link_to "Edit", "#edit", "data-toggle" => "modal", class: 'btn btn-sm btn-success', "ng-click" => "editBook($index)"
+				.modal.fade.in#edit
+					.modal-dialog
+						.modal-content
+							.modal-header
+								%button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
+								%h3 Редактирование записей
+							%form
+								.modal-body
+									.row
+										.col-xs-4
+											%label Название
+										.col-xs-6
+											%input.form-control{"ng-model" => "name", type: "text"}/
+									%br
+									.row
+										.col-xs-4
+											%label Описание
+										.col-xs-6
+											%input.form-control{"ng-model" => "caption", type: "text"}/
+									%br
+									.row
+										.col-xs-4
+											%label Дата создания
+										.col-xs-6
+											%input.form-control{"ng-model" => "release_date", type: "text"}/
+									%br
+									.row
+										.col-xs-9.col-xs-offset-2
+											%button.btn.btn-success{"ng-click" => "saveBook()", "aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} Сохранить
